--- a/pom.xml
+++ b/pom.xml
@@ -36,39 +36,39 @@
          <artifactId>spring-web</artifactId>
          <version>${spring.version}</version>
       </dependency>
-
+      <dependency>
+         <groupId>org.springframework.hateoas</groupId>
+         <artifactId>spring-hateoas</artifactId>
+         <version>0.8.0.RELEASE</version>
+      </dependency>
       <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
          <version>2.5</version>
+         <scope>provided</scope>
       </dependency>
-
       <dependency>
          <groupId>javax.servlet.jsp</groupId>
          <artifactId>jsp-api</artifactId>
          <version>2.1</version>
          <scope>provided</scope>
       </dependency>
-
       <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-webmvc</artifactId>
          <version>${spring.version}</version>
       </dependency>
-
       <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-test</artifactId>
          <version>${spring.version}</version>
          <scope>test</scope>
       </dependency>
-
       <dependency>
          <groupId>com.fasterxml.jackson.datatype</groupId>
          <artifactId>jackson-datatype-joda</artifactId>
          <version>2.1.1</version>
       </dependency>
-
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
