--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
    <properties>
       <spring.version>3.2.4.RELEASE</spring.version>
       <repository.snapshot>http://192.168.130.1:8081/nexus/content/repositories/snapshots</repository.snapshot>
+      <spock-core.version>0.7-groovy-2.0</spock-core.version>
+      <geb-spock.version>0.9.2</geb-spock.version>
+      <groovy-all.version>2.1.5</groovy-all.version>
+      <slf4j-api.version>1.7.5</slf4j-api.version>
+      <jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
    </properties>
 
    <repositories>
@@ -29,12 +34,24 @@
          <groupId>org.springframework</groupId>
          <artifactId>spring-core</artifactId>
          <version>${spring.version}</version>
+         <exclusions>
+            <exclusion>
+               <artifactId>commons-logging</artifactId>
+               <groupId>commons-logging</groupId>
+            </exclusion>
+         </exclusions>
       </dependency>
 
       <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-web</artifactId>
          <version>${spring.version}</version>
+         <exclusions>
+            <exclusion>
+               <artifactId>commons-logging</artifactId>
+               <groupId>commons-logging</groupId>
+            </exclusion>
+         </exclusions>
       </dependency>
       <dependency>
          <groupId>org.springframework.hateoas</groupId>
@@ -69,14 +86,68 @@
          <artifactId>jackson-datatype-joda</artifactId>
          <version>2.1.1</version>
       </dependency>
+
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-api</artifactId>
+         <version>${slf4j-api.version}</version>
+      </dependency>
+
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>jcl-over-slf4j</artifactId>
+         <version>${jcl-over-slf4j.version}</version>
+      </dependency>
+
+      <dependency>
+         <groupId>ch.qos.logback</groupId>
+         <artifactId>logback-classic</artifactId>
+         <version>1.0.13</version>
+      </dependency>
+
+
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
-         <version>4.8.2</version>
+         <version>4.11</version>
+         <scope>test</scope>
+      </dependency>
+
+      <!--Geb Integration Tests-->
+      <dependency>
+         <groupId>org.codehaus.groovy</groupId>
+         <artifactId>groovy-all</artifactId>
+         <version>${groovy-all.version}</version>
+      </dependency>
+
+      <!--Spock support-->
+      <dependency>
+         <groupId>org.spockframework</groupId>
+         <artifactId>spock-core</artifactId>
+         <version>${spock-core.version}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.gebish</groupId>
+         <artifactId>geb-spock</artifactId>
+         <version>${geb-spock.version}</version>
+         <scope>test</scope>
+      </dependency>
+
+      <!-- Selenium Drivers (all the desired browser drivers here) -->
+      <dependency>
+         <groupId>org.seleniumhq.selenium</groupId>
+         <artifactId>selenium-firefox-driver</artifactId>
+         <version>2.33.0</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.seleniumhq.selenium</groupId>
+         <artifactId>selenium-support</artifactId>
+         <version>2.33.0</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
-
    <build>
       <finalName>swagger-demo</finalName>
       <plugins>
@@ -87,14 +158,7 @@
                <target>1.6</target>
             </configuration>
          </plugin>
-         <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-               <includes>
-                  <include>**/*Tests.java</include>
-               </includes>
-            </configuration>
-         </plugin>
+
          <plugin>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>maven-jetty-plugin</artifactId>
@@ -111,6 +175,68 @@
                </connectors>
             </configuration>
          </plugin>
+
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.16</version>
+            <configuration>
+               <includes>
+                  <include>%regex[.*Spec.*]</include>
+                  <include>%regex[.*Test.*]</include>
+                  <include>%regex[.*test.*]</include>
+                  <include>%regex[.*spec.*]</include>
+
+               </includes>
+               <systemPropertyVariables>
+                  <geb.build.baseUrl>http://127.0.0.1:8080/swagger-springmvc-demo/</geb.build.baseUrl>
+                  <geb.build.reportsDir>target/test-reports/geb</geb.build.reportsDir>
+               </systemPropertyVariables>
+
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.codehaus.gmaven</groupId>
+            <artifactId>gmaven-plugin</artifactId>
+            <dependencies>
+               <dependency>
+                  <groupId>org.codehaus.groovy</groupId>
+                  <artifactId>groovy-all</artifactId>
+                  <version>${groovy-all.version}</version>
+               </dependency>
+               <dependency>
+                  <groupId>org.codehaus.gmaven.runtime</groupId>
+                  <artifactId>gmaven-runtime-1.7</artifactId>
+                  <version>1.3</version>
+                  <exclusions>
+                     <exclusion>
+                        <groupId>org.codehaus.groovy</groupId>
+                        <artifactId>groovy-all</artifactId>
+                     </exclusion>
+                  </exclusions>
+               </dependency>
+            </dependencies>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>testCompile</goal>
+                  </goals>
+               </execution>
+            </executions>
+
+         </plugin>
+
+
+
+
+
+
+
+
+
+
+
+
 
       </plugins>
    </build>
