--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <slf4j-api.version>1.7.5</slf4j-api.version>
     <jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
     <http.port>8097</http.port>
+    <swagger-springmvc.version>0.8.2-SNAPSHOT</swagger-springmvc.version>
   </properties>
 
   <repositories>
@@ -36,7 +37,7 @@
     <dependency>
       <groupId>com.mangofactory</groupId>
       <artifactId>swagger-springmvc</artifactId>
-      <version>0.8.2-SNAPSHOT</version>
+      <version>${swagger-springmvc.version}</version>
     </dependency>
 
     <dependency>
