--- a/pom.xml
+++ b/pom.xml
@@ -8,36 +8,27 @@
     <name>swagger-demo</name>
 
     <properties>
-        <spring.version>3.2.4.RELEASE</spring.version>
-        <http.port>8097</http.port>
+        <spring.version>4.0.2.RELEASE</spring.version>        
         <swagger-springmvc.version>0.8.2</swagger-springmvc.version>
+        <spring-hateoas.version>0.9.0.RELEASE</spring-hateoas.version>
+        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+        <org.slf4j-version>1.7.6</org.slf4j-version>
+        <log4j-version>1.2.17</log4j-version>
+        <http.port>8097</http.port>
     </properties>
 
-
-
     <dependencies>
-        <!--<dependency>-->
-        <!--<groupId>com.mangofactory</groupId>-->
-        <!--<artifactId>swagger-springmvc</artifactId>-->
-        <!--<version>0.8.1</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>com.mangofactory</groupId>
             <artifactId>swagger-springmvc</artifactId>
             <version>${swagger-springmvc.version}</version>
         </dependency>
-
+        
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
+            <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>commons-logging</artifactId>
-                    <groupId>commons-logging</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
@@ -54,31 +45,42 @@
         <dependency>
             <groupId>org.springframework.hateoas</groupId>
             <artifactId>spring-hateoas</artifactId>
-            <version>0.8.0.RELEASE</version>
+            <version>${spring-hateoas.version}</version>
         </dependency>
         <!-- Servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>${javax.servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
+
+        
+        <!-- Logging -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${org.slf4j-version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${org.slf4j-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${org.slf4j-version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j-version}</version>
+            <scope>runtime</scope>
+        </dependency>
         
-
-        
-
-
-
-
-
-       
     </dependencies>
     <build>
         <finalName>swagger-demo</finalName>
@@ -117,54 +119,9 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
-                <configuration>
-                    <includes>
-                        <include>%regex[.*Test.*]</include>
-                        <include>%regex[.*test.*]</include>
-                        <include>%regex[.*Spec.*]</include>
-                        <include>%regex[.*spec.*]</include>
-                    </includes>
-                    <systemPropertyVariables>
-                        <geb.build.baseUrl>http://127.0.0.1:${http.port}/swagger-springmvc-demo/</geb.build.baseUrl>
-                        <geb.build.reportsDir>target/test-reports/geb</geb.build.reportsDir>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
+            
 
-            <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>gmaven-plugin</artifactId>
-                <version>1.5</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.groovy</groupId>
-                        <artifactId>groovy-all</artifactId>
-                        <version>${groovy-all.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.codehaus.gmaven.runtime</groupId>
-                        <artifactId>gmaven-runtime-1.7</artifactId>
-                        <version>1.3</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>org.codehaus.groovy</groupId>
-                                <artifactId>groovy-all</artifactId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            
         </plugins>
     </build>
 </project>
