Converting to gradle multi project. Updated with latest swagger-springmvc changes. Oauth still out standing due to bug in swagger-springmvc with objectmapper.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 .idea
 *.iml
+*.ipr
 target
 .settings
 .classpath
 .project
 /test/drivers/
 *.DS_Store
+build/
+.idea
+out
+classes
+*.iws
+.gradle
