--- a/spring3-accounting/build.gradle
+++ b/spring3-accounting/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'tomcat'
 
-apply from: "$rootDir/gradle/functionalTest.gradle"
-
+//apply from: "$rootDir/gradle/functionalTest.gradle"
+//
 jvmsrc {
     packageName "com.ak.spring3.accounting"
 }
