--- a/gradle/functionalTest.gradle
+++ b/gradle/functionalTest.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'groovy'
+apply plugin: 'idea'
+apply plugin: 'jetty'
 
 configurations {
     functTestCompile.extendsFrom testCompile
@@ -11,15 +13,38 @@ dependencies {
 
 sourceSets {
     functionalTest {
-        groovy.srcDir file('src/functTest/groovy')
         resources.srcDir file('src/functTest/resources')
         compileClasspath = sourceSets.main.output + configurations.functTestCompile
         runtimeClasspath = output + compileClasspath + configurations.functTestRuntime
+        groovy {
+            srcDir 'src/functTest/groovy'
+        }
     }
 }
 
 ext {
     functionalTestReportDir = file("$test.reports.html.destination/functional")
     functionalTestResultsDir = file("$test.reports.junitXml.destination/functional")
-//    functionalCommonSystemProperties = ['geb.env': 'firefox', 'geb.build.reportsDir': reporting.file("$name/geb")]
+}
+
+
+task functionalTest(type: Test, dependsOn: tomcatRun) {
+    testClassesDir = sourceSets.functionalTest.output.classesDir
+    classpath = sourceSets.functionalTest.runtimeClasspath
+    reports.html.destination = functionalTestReportDir
+    reports.junitXml.destination = functionalTestResultsDir
+
+    finalizedBy tomcatStop
+}
+
+// lazy as plugin not applied yet - get idea to see the source folders and external dependencies
+plugins.withType(org.gradle.plugins.ide.idea.IdeaPlugin) {
+    idea {
+        module {
+            testSourceDirs += sourceSets.functionalTest.groovy.srcDirs
+            testSourceDirs += sourceSets.functionalTest.resources.srcDirs
+            scopes.TEST.plus.add(configurations.functTestCompile)
+            scopes.TEST.plus.add(configurations.functTestRuntime)
+        }
+    }
 }
