--- a/spring3-testsuite/src/main/webapp/WEB-INF/web.xml
+++ b/spring3-testsuite/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 
 	<servlet-mapping>
 		<servlet-name>mvc-dispatcher</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
 </web-app>
