--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: java
-
 jdk:
-  - openjdk6
-
+- openjdk6
 script:
-  - ./gradlew test functionalTest -i
+- "./gradlew test functionalTest -i"
+env:
+  global:
+    secure: B1hgmACloviepBvXzi+ALNyRoAXsHl0D4/EsQYjkQ2ij+brhcmdV05uMh8RYYEkiCSN0J35SdiC/rAKMuTKb0n163YrERmT+NRHX+AcAIUtQXHbQpQASDPXw740kDzng5hzfeG0A+2lwZRdVY/K6NB+Kh7/3smlycYGBGomBk+o=
