--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
 language: java
 jdk:
 - openjdk6
+
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+
+before_script:
+  - sleep 3 # give xvfb some time to start
+  - ./gradlew tomcatRun # start a Web server
+  - sleep 3 # give Web server some time to bind to sockets, etc
+
 script:
-- "./gradlew test functionalTest -i"
+- "./gradlew functionalTest acceptanceTest -i"
+
 env:
   global:
     secure: B1hgmACloviepBvXzi+ALNyRoAXsHl0D4/EsQYjkQ2ij+brhcmdV05uMh8RYYEkiCSN0J35SdiC/rAKMuTKb0n163YrERmT+NRHX+AcAIUtQXHbQpQASDPXw740kDzng5hzfeG0A+2lwZRdVY/K6NB+Kh7/3smlycYGBGomBk+o=
