--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,36 +1,39 @@
 ext {
-    springVersion = '3.2.8.RELEASE'
-    spockVersion = '0.7-groovy-2.0'
-    gebSpockVersion = '0.9.2'
-    groovyVersion = '2.2.1'
-    log4jVersion = "1.2.17"
-    jacksonVersion = "2.1.5"
-    slf4jVersion = '1.7.5'
-    tomcatVersion = '7.0.53'
-    swaggerSpringMvcVersion = '0.8.4-SNAPSHOT'
-    swaggerUiVersion = '2.0.16'
-    swaggerUiDist = "build/libs/swagger-ui-dist.zip"
-    swaggerUiExplodedDir = "swagger-ui-${swaggerUiVersion}/dist/"
+  springVersion = '3.2.8.RELEASE'
+  spockVersion = '0.7-groovy-2.0'
+  gebSpockVersion = '0.9.2'
+  groovyVersion = '2.2.1'
+  log4jVersion = "1.2.17"
+  jacksonVersion = "2.1.5"
+  slf4jVersion = '1.7.5'
+  tomcatVersion = '7.0.53'
+  swaggerSpringMvcVersion = '0.8.4-SNAPSHOT'
+  swaggerUiVersion = '2.0.16'
+  seleniumVersion = '2.41.0'
+  chromeDriverVersion = '2.41.0'
+  firefoxDriverVersion = '2.41.0'
+  swaggerUiDist = "build/libs/swagger-ui-dist.zip"
+  swaggerUiExplodedDir = "swagger-ui-${swaggerUiVersion}/dist/"
 }
 
 ext.libs = [
 
-        swagger: [
+        swagger       : [
                 "com.mangofactory:swagger-springmvc:$swaggerSpringMvcVersion"
         ],
 
-        springWeb: {String version = springVersion->
-            return [
-                    "org.springframework:spring-web:$version",
-                    "org.springframework:spring-webmvc:$version",
-                    "org.springframework:spring-context-support:$version",
-                    "org.springframework:spring-test:$version",
-                    "org.springframework.hateoas:spring-hateoas:0.10.0.RELEASE",
-                    "javax.servlet:jstl:1.2"
-            ]
+        springWeb     : { String version = springVersion ->
+          return [
+                  "org.springframework:spring-web:$version",
+                  "org.springframework:spring-webmvc:$version",
+                  "org.springframework:spring-context-support:$version",
+                  "org.springframework:spring-test:$version",
+                  "org.springframework.hateoas:spring-hateoas:0.10.0.RELEASE",
+                  "javax.servlet:jstl:1.2"
+          ]
         },
 
-        jackson:[
+        jackson       : [
                 "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}",
                 "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
                 "com.fasterxml.jackson.datatype:jackson-datatype-joda:${jacksonVersion}",
@@ -38,9 +41,9 @@ ext.libs = [
                 "com.fasterxml.jackson.module:jackson-module-scala_2.10:${jacksonVersion}"
         ],
 
-        validation: ['org.hibernate:hibernate-validator:5.0.2.Final'],
+        validation    : ['org.hibernate:hibernate-validator:5.0.2.Final'],
 
-        logging:[
+        logging       : [
                 "org.slf4j:jcl-over-slf4j:${slf4jVersion}",
                 "org.slf4j:slf4j-api:${slf4jVersion}",
                 "org.slf4j:slf4j-log4j12:${slf4jVersion}",
@@ -52,8 +55,15 @@ ext.libs = [
                 "org.codehaus.groovy:groovy-all:${groovyVersion}",
                 "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1",
                 "org.spockframework:spock-core:${spockVersion}",
+        ],
+
+        acceptanceTest: [
+                "org.codehaus.groovy:groovy-all:${groovyVersion}",
+                "org.spockframework:spock-core:${spockVersion}",
                 "org.gebish:geb-spock:${gebSpockVersion}",
-                "org.seleniumhq.selenium:selenium-support:2.33.0",
-                "org.seleniumhq.selenium:selenium-chrome-driver:2.37.1"
+                "org.seleniumhq.selenium:selenium-support:${seleniumVersion}",
+//                "org.seleniumhq.selenium:selenium-remote-driver:${seleniumVersion}",
+                "org.seleniumhq.selenium:selenium-chrome-driver:${chromeDriverVersion}",
+                "org.seleniumhq.selenium:selenium-firefox-driver:${firefoxDriverVersion}",
         ]
 ]
