--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,8 @@ language: java
 jdk:
 - openjdk6
 
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-
-before_script:
-  - sleep 3 # give xvfb some time to start
-
 script:
-- TERM=dumb ./gradlew build :spring3-testsuite:tomcatRun :spring3-testsuite:functionalTest :spring3-testsuite:acceptanceTest -i --stacktrace
+- TERM=dumb ./gradlew build :spring3-testsuite:tomcatRun :spring3-testsuite:functionalTest :spring3-testsuite:acceptanceTestPhantom -i --stacktrace
 
 env:
   global:
