Adding manifest attributes to jar. Updating readme.

--- a/swagger-ui/build.gradle
+++ b/swagger-ui/build.gradle
@@ -58,6 +58,15 @@ task sdoc(type: Copy) {
 jar {
   from("${buildDir}/${swaggerUiExplodedDir}") {
     into "META-INF/resources"
+
+    manifest {
+      attributes(
+              "Implementation-Title":       artifactLabel,
+              "Implementation-Version":     version,
+              "SwaggerUi-Version":          swaggerUiVersion,
+              "Swagger-Spring-MVC-Version": swaggerSpringMvcVersion
+      )
+    }
   }
 }
 
