--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -15,7 +15,7 @@ ext {
   firefoxDriverVersion = '2.41.0'
   swaggerUiDist = "build/libs/swagger-ui-dist.zip"
   swaggerUiExplodedDir = "swagger-ui-${swaggerUiVersion}/dist/"
-  bootVersion = '1.1.0.RC1'
+  bootVersion = '1.1.1.RELEASE'
 }
 
 ext.libs = [
@@ -34,7 +34,7 @@ ext.libs = [
                   "org.springframework:spring-webmvc:$version",
                   "org.springframework:spring-context-support:$version",
                   "org.springframework:spring-test:$version",
-                  "org.springframework.hateoas:spring-hateoas:0.10.0.RELEASE",
+                  "org.springframework.hateoas:spring-hateoas:0.12.0.RELEASE",
                   "org.springframework.security:spring-security-web:${springSecurityVersion}",
                   "org.springframework.security:spring-security-config:${springSecurityVersion}",
                   "javax.servlet:jstl:1.2"
