Updating dependencies for 0.9.0

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ ext {
       mavenCentral()
     }
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
     jcenter()
   }
 }
